--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -9,3 +9,6 @@
 
 @import './components/showcase';
 @import './components/bestCollection';
+
+@import './components/discount';
+@import './components/topSelling'
