--- a/css/scss/core/_mixins.scss
+++ b/css/scss/core/_mixins.scss
@@ -1,4 +1,9 @@
-@mixin md {
+@mixin mobile {
+    @media (max-width: 767px) {
+      @content;
+    }
+  }
+  @mixin md {
     @media (min-width: 768px ) {
         @content
     }
