--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -11,4 +11,5 @@
 @import './components/bestCollection';
 
 @import './components/discount';
-@import './components/topSelling'
+@import './components/topSelling';
+@import './components/subscribe'
