--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,16 @@ button:hover {
   font-weight: 400;
 }
 
+.btn-arrow-white {
+  border: 1px solid #292929;
+  font-weight: 400;
+  border-radius: 5px;
+}
+.btn-arrow-white:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
 header {
   padding: 15px 0;
 }
@@ -441,7 +451,6 @@ header .btn-toggle {
 ._discount .discount-card {
   display: block;
   grid-column: 1/-1;
-  border: 1px solid black;
   margin: 0 !important;
   background-color: #ffffff;
 }
@@ -518,7 +527,7 @@ header .btn-toggle {
   font-size: 30px;
   font-weight: 600;
 }
-._topSelling .container {
+._topSelling .content {
   display: grid;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -528,7 +537,7 @@ header .btn-toggle {
   gap: 20px;
 }
 @media (min-width: 992px) {
-  ._topSelling .container {
+  ._topSelling .content {
     max-width: 1390px;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-flow: column;
@@ -594,4 +603,62 @@ header .btn-toggle {
   ._topSelling:hover .shopping-cart-icon {
     display: none;
   }
+}
+._topSelling ._bDiscount {
+  margin-top: 60px;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid black;
+}
+
+.subscribe {
+  background-color: #AEAEAE;
+  padding: 60px;
+}
+.subscribe .container {
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 120px;
+  position: relative;
+}
+.subscribe .mail-text {
+  position: absolute;
+  left: 280px;
+  bottom: 90px;
+  margin: auto;
+  width: 800px;
+  padding: 20px;
+  border: none;
+  border-radius: 40px;
+  border-top: 1px solid #AEAEAE;
+  border-bottom: 1px solid #AEAEAE;
+  border-left: 1px solid #AEAEAE;
+}
+.subscribe .s_button {
+  padding: 20px;
+  bottom: 90px;
+  position: absolute;
+  right: 240px;
+  display: block;
+  margin-left: -100px;
+  background-color: #FA3150;
+  color: #ffffff;
+  border: none;
+  border-radius: 40px;
+  font-size: 1.1em;
+  font-family: "Poppins", sans-serif;
+}
+.subscribe .s_button:hover {
+  background-color: #292929;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }/*# sourceMappingURL=style.css.map */
