--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -12,4 +12,5 @@
 
 @import './components/discount';
 @import './components/topSelling';
-@import './components/subscribe'
+@import './components/subscribe';
+@import './components/productDetails';
