--- a/css/scss/components/_subscribe.scss
+++ b/css/scss/components/_subscribe.scss
@@ -1,43 +1,61 @@
 .subscribe {
-    background-color: $color-dark-4;
-    padding: 60px;
+   display: block;
     .container {
-        background-color: $color-white;
         display: flex;
+     
         justify-content: center;
-        padding: 120px;
+        align-items: center;
+        height: 120px;
+       
         position: relative;
+
+    @include lg {
+        padding-left: -5000px;
     }
+        }
     .mail-text {
-      position: absolute;
-      left: 280px;
-      bottom: 90px;
-      margin: auto;
-        width: 800px;
-        padding: 20px;
-        border: none;
+        position: absolute;
+        left: 15px;
+        width: 80%;
         border-radius: 40px;
-        border-top: 1px solid $color-dark-4;
-        border-bottom: 1px solid $color-dark-4;
-        border-left: 1px solid $color-dark-4;
+        border: 1px solid $color-dark-4;
+        padding: 5px;
+        text-indent: 10px;
+
+
+        &:focus {
+           outline: none;
+          }
+        @include lg {
+           
+            font-size: 1rem;
+            width: 70%;
+            //margin-left: 60px;
+            left: 130px;
+            padding: 10px;
+         
+        }
     }
     .s_button {
-        padding: 20px;
-        bottom: 90px;
+        
         position: absolute;
-       right: 240px;
-       display: block;
-        margin-left: -100px;
-        background-color: $color-theme-1;
-        color: $color-white;
-      border:none;
+     right: 15px;
+      background-color: $color-theme-1;
+      color: $color-white;
+      border-left:none;
+      border-top:  1px solid $color-dark-4;
+      border-right:  1px solid $color-dark-4;
+      border-bottom:  1px solid $color-dark-4;
+        font-size: 0.6rem;
         border-radius: 40px;
-        font-size: 1.1em;
-        font-family: $font-poppins;
-
         &:hover {
             background-color: $color-dark-2;
             transition: all 0.5s;
-        }
+          }
+          @include lg {
+            right: 130px;
+          //  margin-right: -20px;
+            font-size: 1rem;
+          }
     }
 }
